[gd_scene load_steps=5 format=3 uid="uid://dc03ie8nfujip"]

[ext_resource type="Script" path="res://Scripts/pirate_treasure.gd" id="1_bt2ls"]
[ext_resource type="Texture2D" uid="uid://bd1ayeng748ng" path="res://Resources/Textures/pirateSchatz.png" id="1_wsdyy"]
[ext_resource type="Texture2D" uid="uid://dgcsktj6h3mjo" path="res://Resources/Textures/Interagieren Anzeige v1.png" id="3_cm680"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qyuub"]
radius = 32.0

[node name="pirate_treasure" type="Node2D"]
script = ExtResource("1_bt2ls")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.323072, 0.323071)
scale = Vector2(0.110006, 0.110006)
texture = ExtResource("1_wsdyy")

[node name="chestdetection" type="Area2D" parent="."]
position = Vector2(0.322948, 0.323009)

[node name="CollisionShape2D" type="CollisionShape2D" parent="chestdetection"]
position = Vector2(3.8147e-06, -1.43051e-06)
scale = Vector2(2.72, 2.72)
shape = SubResource("CircleShape2D_qyuub")

[node name="InteractUI" type="Sprite2D" parent="."]
visible = false
position = Vector2(-4.54747e-13, -168)
scale = Vector2(0.29682, 0.29682)
texture = ExtResource("3_cm680")

[connection signal="body_entered" from="chestdetection" to="." method="_on_chestdetection_body_entered"]
[connection signal="body_exited" from="chestdetection" to="." method="_on_chestdetection_body_exited"]
